added hostel component
