# src/routes/HostelRouter.ts
@@ -1,4 +1,4 @@
-import { AuthComponent } from '../components'
+import { HostelComponent } from '../components'
 import { Router } from 'express'
 
 /**
@@ -7,81 +7,110 @@ import { Router } from 'express'
 const router: Router = Router()
 
 /**
- * POST method route
- * @example http://localhost:PORT/signup
+ * GET method route
+ * @example http://localhost:PORT/v1/hostel
+ *
  * @swagger
- * /auth/signup/:
+ * /v1/hostel:
+ *   get:
+ *     description: Get all stored hostels in Database
+ *     tags: ["hostels"]
+ *     security:
+ *      - ApiKeyAuth: []
+ *     responses:
+ *       200:
+ *         description: An array of hostels
+ *         content:
+ *           application/json:
+ *             schema:
+ *               oneOf:
+ *                - $ref: '#/components/schemas/Hostels'
+ *       default:
+ *          description: unexpected error
+ *          content:
+ *            application/json:
+ *              schema:
+ *                $ref: '#/components/schemas/Error'
+ */
+ router.get('/', HostelComponent.findAll)
+
+/**
+ * GET method route
+ * @example http://localhost:PORT/v1/hostel/:code
+ *
+ * @swagger
+ * /v1/hostel/{code}:
+ *   get:
+ *     description: Get hostel by code in Database
+ *     tags: ["hostels"]
+ *     security:
+ *      - ApiKeyAuth: []
+ *     parameters:
+ *      - in: path
+ *        name: code
+ *        description: the unique code of hostel
+ *        required: true
+ *        schema:
+ *          type: string
+ *     responses:
+ *       200:
+ *         description: An array of hostel
+ *         content:
+ *           application/json:
+ *             schema:
+ *               oneOf:
+ *                - $ref: '#/components/schemas/Hostel'
+ *       default:
+ *          description: unexpected error
+ *          content:
+ *            application/json:
+ *              schema:
+ *                $ref: '#/components/schemas/Error'
+ */
+ router.get('/:code', HostelComponent.findOne)
+
+/**
+ * POST method route
+ * @example http://localhost:PORT/v1/hostel/create
+ * @swagger
+ * /v1/hostel/create:
  *  post:
  *    description: sign up user to application
- *    tags: ["auth"]
+ *    tags: ["hostels"]
  *    requestBody:
  *      description: sign up body
  *      required: true
  *      content:
  *        application/json:
  *          schema:
- *            $ref: '#/components/schemas/UserSchema'
+ *            $ref: '#/components/schemas/HostelSchema'
  *          example:
- *            email: test.user@mail.com
- *            password: test_test
+ *            code: sjs
+ *            hostelName: sjs hostels (pvt) ltd.
+ *            contactNumber: 0712345678
+ *            location: {logitude: 51.121631684, latitude: 45.16846831}
+ *            address: 357/1, new kandy road, malabe, sri lanka.
+ *            distanceToMainRoad: 800m
+ *            owner: sandun@gmail.com
  *    responses:
  *      200:
- *        description: user successfuly signed in
+ *        description: Hostel successfuly created
  *        content:
  *          appication/json:
  *            example:
  *              status: 200
  *              logged: true
- *              message: Sign in successfull!!
+ *              message: Hostel creation successfull!!
  *      400:
- *        description: sign in failed
+ *        description: Hostel creation failed
  *        content:
  *          application/json:
  *            example:
  *              status: 400
  *              logged: false
- *              message: Email already exists
+ *              message: code already exists
  */
-router.post('/signup', AuthComponent.signup)
-
-/**
- * POST method route
- * @example http://localhost:PORT/login
- *
- * @swagger
- * /auth/login/:
- *  post:
- *    description: Login user to application
- *    tags: ["auth"]
- *    requestBody:
- *      description: login body
- *      required: true
- *      content:
- *        application/json:
- *          schema:
- *            $ref: '#/components/schemas/UserSchema'
- *          example:
- *            email: test.user@mail.com
- *            password: test_test
- *    responses:
- *      200:
- *        description: user successfuly logged
- *        content:
- *          appication/json:
- *            example:
- *              status: 200
- *              logged: true
- *              message: Successfully logged!
- *      401:
- *        description: Not logged, invalid credentials
- *        content:
- *          application/json:
- *            example:
- *              status: 401
- *              logged: false
- *              message: Invalid credentials
- */
-router.post('/login', AuthComponent.login)
+router.post('/create', HostelComponent.create)
 
 /**
  * @export {express.Router}
